[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Player/Hook/Hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actors/Player/LedgeDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player/FloorDetector.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Player/Skin.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Player/Body.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Player/CameraRig.gd" type="Script" id=7]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Hook" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -30 )

[node name="LedgeDetector" parent="." instance=ExtResource( 3 )]

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -30 )
cast_to = Vector2( 0, 80 )
collision_mask = 6
script = ExtResource( 4 )

[node name="Skin" type="Position2D" parent="."]
script = ExtResource( 5 )

[node name="Body" type="Node2D" parent="Skin"]
position = Vector2( 0, -30 )
script = ExtResource( 6 )
size = Vector2( 50, 50 )
outline = Vector2( 10, 10 )
color_fill = Color( 0, 0.431373, 0.717647, 1 )
color_outline = Color( 0.231373, 0.145098, 0.584314, 1 )

[node name="Tween" type="Tween" parent="Skin"]

[node name="CameraRig" type="Position2D" parent="Skin"]
position = Vector2( 0, -30 )
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="Skin/CameraRig"]
current = true
process_mode = 0
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 6.0
editor_draw_drag_margin = true
